# hampy

./: .gitignore  LICENSE  README.md  get_span_data.py  hammerfinder.py  interactive_hammerchecks.py  pyspedas_env.yml  setup.cfg
hampy/: comp_moments.py  get_fac_vdf.py  get_span_data.py  jax_functions.py  load_data.py  misc_functions.py  nonjax_functions.py  orbit_trajectory.py
hampy/plotter/: misc_plots.py  plot_tools.py
tests/: test_jax_speedups.py
