[metadata]
name = hampy
version = 0.0.1
author = Srijan Bharati Das
author_email = srijanbdas@alumni.princeton.edu
description = Setup configuration of hampy.
long_description = file: README.md
long_description_content_type = text/markdown
license = CC BY 4.0
url = 
project_urls =
    Documentation = 
    TravisCI = 
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent
keywords = Solar Wind, Parker Solar Probe, VDF, Hammerhead

[options]
package_dir =
    = .
packages = find:
python_requires = ==3.11.5
install_requires = numpy
tests_require = pytest
zip_safe = False

[options.extras_require]
docs = 
    sphinx 
    sphinx-rtd-theme
    furo
tests = pytest; py

# [options.entry_points]
# console_scripts =
#     sample-bin = matpy.bins.sample_bin:main

[options.packages.find]
where = .